[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Root.gd" type="Script" id=1]
[ext_resource path="res://aim_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Initial_Enemies.gd" type="Script" id=3]
[ext_resource path="res://Enemy_A.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dialogue_bubble.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Dialogue_controller.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Merchant_Sword_A.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Merchant_Sword_A.gd" type="Script" id=10]
[ext_resource path="res://Map Art/9:30 map.png" type="Texture" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 370.757, 187.823, 0, 0, 0, 0, 450.858, 187.823, 0, 0, 0, 0, 350.732, 187.823, 0, 0, 0, 0, 350.693, 236.666 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 353.53, 154.061, 0, 0, 0, 0, 578.403, 152.78 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 441.315, 188.495, 0, 0, 0, 0, 502.204, 412.063 )
}

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node" parent="."]
editor/display_folded = true

[node name="CanvasLayer" type="CanvasLayer" parent="Background"]

[node name="LDLabel" type="Label" parent="Background/CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "REMAINING BULLET: "

[node name="LTLabel" type="Label" parent="Background/CanvasLayer"]
margin_right = 170.0
margin_bottom = 70.0
text = "Move mouse to aim
Left click to shoot
Right click to reload"

[node name="aim_ui" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.298805, 0.0983086 )

[node name="Initial_Enemies" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="En_B" parent="Initial_Enemies" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 577.49, 205.287 )

[node name="Dialogue_bubble" parent="Initial_Enemies/En_B" instance=ExtResource( 5 )]
visible = false

[node name="En_C" parent="Initial_Enemies" instance=ExtResource( 4 )]
position = Vector2( 679.132, 483.816 )

[node name="En_C2" parent="Initial_Enemies" instance=ExtResource( 4 )]
position = Vector2( 680.762, 511.87 )

[node name="En_D" parent="Initial_Enemies" instance=ExtResource( 4 )]
position = Vector2( 300.302, 501.016 )

[node name="En_D2" parent="Initial_Enemies" instance=ExtResource( 4 )]
position = Vector2( 332.897, 500.724 )

[node name="En_A" parent="Initial_Enemies" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 576.675, 178.074 )

[node name="Dialogue_bubble" parent="Initial_Enemies/En_A" instance=ExtResource( 5 )]
visible = false

[node name="Dialogue_controller" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 353.579, 152.708 )
current = true
zoom = Vector2( 0.4, 0.4 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 7 )

[node name="Pre_routes" type="Node" parent="."]
editor/display_folded = true

[node name="Merchant" type="Node" parent="Pre_routes"]

[node name="Merchant_path_s1" type="Path2D" parent="Pre_routes/Merchant"]
position = Vector2( -40.2897, -53.5618 )
scale = Vector2( 0.99874, 0.999999 )
curve = SubResource( 1 )

[node name="Merchant_pathFollow_s1" type="PathFollow2D" parent="Pre_routes/Merchant/Merchant_path_s1"]
position = Vector2( 370.757, 187.823 )
rotation = -3.89129e-06
rotate = false
loop = false

[node name="Camera" type="Node" parent="Pre_routes"]

[node name="PathOne" type="Path2D" parent="Pre_routes/Camera"]
curve = SubResource( 2 )

[node name="FollowOne" type="PathFollow2D" parent="Pre_routes/Camera/PathOne"]
position = Vector2( 353.53, 154.061 )
rotation = 1.0927
rotate = false
loop = false

[node name="PathTwo" type="Path2D" parent="Pre_routes/Camera"]
position = Vector2( 134.273, -40.6251 )
scale = Vector2( 0.752121, 1.03059 )
curve = SubResource( 3 )

[node name="FollowTwo" type="PathFollow2D" parent="Pre_routes/Camera/PathTwo"]
position = Vector2( 441.315, 188.495 )
rotation = 1.06779
rotate = false
loop = false

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 120, 180 )

[node name="Merchant_Sword_A" parent="." instance=ExtResource( 9 )]
position = Vector2( 400, 140 )
scale = Vector2( 1, 0.999999 )
script = ExtResource( 10 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 512, 384 )

[node name="map" type="Sprite" parent="."]
modulate = Color( 0.996078, 1, 0.92549, 1 )
show_behind_parent = true
position = Vector2( 509.353, 399.353 )
scale = Vector2( 0.9625, 0.97 )
texture = ExtResource( 11 )
offset = Vector2( 2, -15 )
